# ferret

./: .gitignore  AGENTS.md  README.md  code.py  falyout.py  main.py  pyproject.toml  pysidedeploy.spec  test.py
.zed/: tasks.json
ferret/core/: signals.py
ferret/views/common/: icon.py
ferret/views/common/edit/: editor.py  highlighter.py  widgets.py
ferret/views/interface/: settings.py
ferret/views/interface/capture/: inteface.py
ferret/views/interface/request/: interface.py
src/ferret/: __main__.py
src/ferret/apps/: window.py
src/ferret/apps/capture/: controllers.py  models.py  services.py  views.py
src/ferret/apps/common/: button.py  filter.py  font.py  info_bar.py  splitter.py
src/ferret/apps/common/edit/: __init__.py  editor.py  highlighter.py  syntax.py  widgets.py
src/ferret/apps/settings/: views.py
src/ferret/config/: resources_rc.py  settings.py
src/ferret/controllers/: capture_controller.py  request.py
src/ferret/core/: application.py  capture.py  http.py  http_client.py  model.py  settings.py
src/ferret/resources/: resources.qrc
src/ferret/resources/i18n/: zh_CN.qm  zh_CN.ts
src/ferret/utils/: exporter.py  http_parser.py  process_resolver.py  proxy_manager.py  scripts.py
src/ferret/views/: window.py
src/ferret/views/common/: bar.py  dialog.py  edit.py  filter.py  header_card.py  icon.py  info_bar.py  json_edit.py  line_edit.py  panel.py  raw_text_panel.py  splitter.py
src/ferret/views/common/edit/: __init__.py  editor.py  highlighter.py  syntax.py  widgets.py
src/ferret/views/interface/: settings.py
(+4 files in other folders)
