[project]
name = "ferret"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "mitmproxy>=12.2.3",
    "pyside6==6.10.3",
    "pyside6-fluent-widgets==1.11.2",
    "psutil>=5.9.0",
    "pygments>=2.20.0",
    "httpx2[http2]>=2.5.0",
    "pip>=26.1.2",
]

[tool.pyside6-project]
files = ["main.py"]


[build-system]
requires = ["uv_build>=0.11.12,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ferret"
module-root = ""