[project]
name = "ferret"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
  "httpx2[http2]>=2.5.0",
  "mitmproxy>=12.2.3",
  "nuitka>=4.1.3",
  "psutil>=5.9.0",
  "pygments>=2.20.0",
  "pyside6==6.10.3",
  "pyside6-fluent-widgets==1.11.2",
]

[project.scripts]
ferret = "ferret.__main__:main"
